--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "danielwanelle",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
